# sahayasoochi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  LICENSE  LICENSE.md  README.md  README.txt  app.py  config.py  corpus.csv  corpus_data.json  gemini_api.py  history.csv  import os.py  import os.txt  letter_history.csv  letter_history.json  pyproject.toml  requirements.txt  st_mic_recorder.py  test_app.py  test_gemini.py
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature_Request.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md  Feature.md
