[project]
name = "sahaya-soochi"
version = "1.0.0"
description = "SahayaSoochi - A beginner-friendly Streamlit app to generate all letters in Telugu and English using Gemini API"
authors = [
    {name = "SahayaSoochi Team", email = "karthikeyagundu2005@gmail.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["telugu", "government-letters", "ai", "streamlit", "gemini", "bilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.2.0",
    "google-generativeai>=0.3.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.2",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://code.swecha.org/Karthikeya_gundu/sahaya-soochi"
Repository = "https://code.swecha.org/Karthikeya_gundu/sahaya-soochi"
Documentation = "https://sahayasoochi.readthedocs.io"
"Bug Tracker" = "https://code.swecha.org/Karthikeya_gundu/sahaya-soochi/-/issues"

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
src = ["app", "utils"]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "S",
    "T20", "Q", "RET", "SIM", "ARG", "DTZ", "ERA",
    "PD", "PGH", "PL", "TRY", "PERF", "LOG", "RUF"
]
ignore = [
    "E501",
    "T201",
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101"]

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

# Coverage configuration
[tool.coverage.run]
source = ["app", "utils"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Build system (required by uv)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
